changing the list to an array